<resources>
    <string name="app_name">ResidentСardOfTatarstan</string>
    <string name="login">Вход</string>
    <string name="login_description">Пользуйтесь всеми преимуществами приложения</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="to_login">Войти</string>
    <string name="text_main">Главная</string>
    <string name="text_payment">Платежи</string>
    <string name="text_services">Сервисы</string>
    <string name="text_promotions">Акции</string>
    <string name="text_news">Новости</string>
    <string name="test">Тест</string>
    <string name="create_family">Создать семью</string>
    <string name="test_description">Пройдите входной тест</string>
    <string name="pay">Оплата</string>
    <string name="subject_payment">Предмет оплаты</string>
    <string name="description">Описание</string>
    <string name="promocode">Промокод</string>
    <string name="promocode_hint_edit_text">Введите промокод при наличии</string>
    <string name="pay_online">Оплатить онлайн</string>
    <string name="afisha">Афиша</string>
    <string name="afisha_description">Мероприятия Татарстана</string>
    <string name="section">Секции</string>
    <string name="section_description">Секции для всех жителей Республики</string>
    <string name="map">Карта</string>
    <string name="map_description">Карта с нужными вам местами</string>
    <string name="routes">Маршруты</string>
    <string name="routes_description">Популярные маршруты</string>
    <string name="for_student">Для студентов</string>
    <string name="special_description">Специальные льготы</string>
    <string name="for_ovz">Для инвалидов</string>
    <string name="back_to_main">Вернуться на главную</string>
    <string name="end_test_title">Вы прошли входной тест!</string>
    <string name="end_test_description">Теперь мы знаем что вам интересно</string>
    <string name="test_text">Тест</string>
    <string name="continue_text">Продолжить</string>
    <string name="search">Поиск</string>
    <string name="create_routes">Построить маршрут</string>
    <string name="recommendations">Рекомендации</string>
    <string name="sport">Спорт</string>
    <string name="cinema">Кино</string>
    <string name="concert">Концерты</string>
    <string name="lecture">Лекции</string>
    <string name="culture">Культура</string>
    <string name="sport_section">Спортивные</string>
    <string name="adaptive">Адаптивные</string>
    <string name="intellect">Интеллектуальные</string>
    <string name="tvori">Творческие</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>