<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.EndTestFragment"
    android:background="@color/text_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_to_main_test"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/image_end_test"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="12dp"
            android:textColor="@color/color_main"
            android:text="@string/end_test_title"
            android:fontFamily="@font/mont_bold"
            android:lineSpacingExtra="5dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/color_text_description_pay"
            android:text="@string/end_test_description"
            android:fontFamily="@font/mont_regular"
            android:lineSpacingExtra="5dp"
            android:gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_to_main_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/color_main"
        android:fontFamily="@font/mont_semibold"
        android:includeFontPadding="false"
        android:lineSpacingExtra="4sp"
        android:paddingHorizontal="31dp"
        android:paddingVertical="25dp"
        android:text="@string/back_to_main"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>