<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.ServicesFragment"
    android:background="@color/text_background">

    <TextView
        android:id="@+id/text_title_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mont_bold"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/text_services"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>

    <LinearLayout
        android:id="@+id/linear_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_services">

        <LinearLayout
            android:id="@+id/card_afisha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/services_background"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="71dp"
                android:src="@drawable/image_splash_screen"
                android:adjustViewBounds="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/afisha"
                    android:fontFamily="@font/mont_semibold"
                    android:lineSpacingExtra="5dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/color_text_description_83"
                    android:text="@string/afisha_description"
                    android:fontFamily="@font/mont_regular"
                    android:lineSpacingExtra="5dp"
                    android:gravity="start"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/card_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="9dp"
                android:padding="24dp"
                android:background="@drawable/services_background">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/image_splash_screen"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/section"
                    android:fontFamily="@font/mont_semibold"
                    android:lineSpacingExtra="5dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/color_text_description_83"
                    android:text="@string/section_description"
                    android:fontFamily="@font/mont_regular"
                    android:lineSpacingExtra="5dp"
                    android:gravity="start"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/card_map"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="9dp"
                android:padding="24dp"
                android:background="@drawable/services_background">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/image_splash_screen"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/map"
                    android:fontFamily="@font/mont_semibold"
                    android:lineSpacingExtra="5dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/color_text_description_83"
                    android:text="@string/map_description"
                    android:fontFamily="@font/mont_regular"
                    android:lineSpacingExtra="5dp"
                    android:gravity="start"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/services_background"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:padding="12dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="71dp"
                android:src="@drawable/image_splash_screen"
                android:adjustViewBounds="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/routes_description"
                    android:fontFamily="@font/mont_semibold"
                    android:lineSpacingExtra="5dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/color_text_description_83"
                    android:text="@string/routes_description"
                    android:fontFamily="@font/mont_regular"
                    android:lineSpacingExtra="5dp"
                    android:gravity="start"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>