<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.LoginFragment"
    android:background="@color/text_background">

    <ImageView
        android:id="@+id/text_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_logo_shedevro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="60dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="@id/text_title_login"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textColor="@color/color_text_title"
            android:text="@string/login"
            android:fontFamily="@font/mont_bold"
            android:lineSpacingExtra="5dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_text_description"
            android:text="@string/login_description"
            android:fontFamily="@font/mont_regular"
            android:lineSpacingExtra="5dp"
            android:gravity="start"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/color_text_description"
            app:counterTextColor="@color/color_text_description"
            app:cursorColor="@color/text_color_edit_text"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:minHeight="60dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/email"
                android:textColorHint="@color/color_text_description"
                android:textSize="16sp"
                android:singleLine="true"
                android:fontFamily="@font/mont_regular"
                android:textCursorDrawable="@drawable/cursor_style_edit_text"
                android:textColor="@color/text_color_edit_text"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/color_text_description"
            app:counterTextColor="@color/color_text_description"
            app:cursorColor="@color/text_color_edit_text"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:minHeight="60dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/password"
                android:textColorHint="@color/color_text_description"
                android:textSize="16sp"
                android:singleLine="true"
                android:fontFamily="@font/mont_regular"
                android:textCursorDrawable="@drawable/cursor_style_edit_text"
                android:textColor="@color/text_color_edit_text"
                android:inputType="textPassword"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_main"
                    android:paddingVertical="25dp"
                    android:text="@string/to_login"
                    android:includeFontPadding="false"
                    android:paddingHorizontal="31dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="50dp"
                    android:fontFamily="@font/mont_semibold"
                    android:lineSpacingExtra="4sp"/>

                <ProgressBar
                    android:id="@+id/progress_login"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/color_main"
                    android:visibility="invisible"
                    tools:visibility="visible"/>

            </FrameLayout>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>