<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.MainFragment"
    android:background="@color/text_background">

    <TextView
        android:id="@+id/text_title_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mont_bold"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/text_main"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:src="@drawable/image_card"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_main" />

    <LinearLayout
        android:id="@+id/onboarding_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/services_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:padding="24dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/icon_onboarding"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/test"
                android:fontFamily="@font/mont_semibold"
                android:lineSpacingExtra="5dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/color_text_description_83"
                android:text="@string/test_description"
                android:fontFamily="@font/mont_regular"
                android:lineSpacingExtra="5dp"
                android:gravity="start"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_family"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/services_background"
        android:orientation="horizontal"
        android:padding="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_button">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_family" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mont_semibold"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:text="@string/create_family"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>