<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.PayFragment"
    android:background="@color/text_background">

    <TextView
        android:id="@+id/text_title_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mont_bold"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/pay"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>

    <LinearLayout
        android:id="@id/linear_sum_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_title_pay"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/subject_payment"
            android:fontFamily="@font/mont_semibold"
            android:lineSpacingExtra="5dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/color_text_description_pay"
            android:text="Опалат услуг"
            android:fontFamily="@font/mont_regular"
            android:lineSpacingExtra="5dp"
            android:gravity="start"/>

        <TextView
            android:id="@+id/sum_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="₽1499.00"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/mont_semibold"
            android:lineSpacingExtra="5dp"
            android:gravity="center"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:src="@drawable/image_card"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_sum_pay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCard">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/color_text_description_pay"
            android:text="@string/promocode"
            android:fontFamily="@font/mont_regular"
            android:lineSpacingExtra="10dp"
            android:layout_marginTop="24dp"
            android:gravity="start"
            android:layout_marginStart="24dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/color_text_description"
            app:counterTextColor="@color/color_text_description"
            app:cursorColor="@color/text_color_edit_text"
            app:hintEnabled="false"
            android:layout_marginTop="6dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:minHeight="60dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/promocode_hint_edit_text"
                android:textColorHint="@color/color_text_description"
                android:textSize="16sp"
                android:singleLine="true"
                android:fontFamily="@font/mont_regular"
                android:textCursorDrawable="@drawable/cursor_style_edit_text"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp">

        <Button
            android:id="@+id/pay_online"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_main"
            android:fontFamily="@font/mont_semibold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="4sp"
            android:paddingHorizontal="31dp"
            android:paddingVertical="25dp"
            android:text="@string/pay_online"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="50dp" />

        <ProgressBar
            android:id="@+id/progress_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminateTint="@color/color_main"
            android:visibility="invisible"
            tools:visibility="visible" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>